# stepic-cpp_multithreaded

./: CMakeLists.txt
HW5.4_1/: Makefile  main.c
HW5.4_2/: main.c
HW5.4_3/: work.cpp
HW6.2/: msg_queue_POSIX.c  msg_queue_SysV.c
HW6.3/: a.out  posix_sem.c  sysV_sem.c
HW6.4/: posix_shm.c  sysV_shm.c
HW7.2/: main.c
final_src/: main.cpp
